chore: update deps and fix window overflow style bug

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -86,13 +86,15 @@ $light-gray: #bfbfbf;
 }
 
 .canvases {
-  display: flex;
-  flex-flow: row;
+  display: grid;
 
   > div {
+    background-color: $light-gray;
+    position: fixed;
     margin: 10px;
     display: table;
-    background-color: $light-gray;
+    grid-column: 1;
+    grid-row: 1;
   }
 
   .canvas {
